# buganize

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALLATION.md  README.md  USAGE.md  cli.sh  gui.sh  pyproject.toml  shell.nix
.github/workflows/: publish-python.yml  scheduled-tests.yml
notebooks/: 01_search.ipynb  02_issues.ipynb  03_comments.ipynb  04_export.ipynb  05_triage.ipynb
src/buganise/: __init__.py  __main__.py
src/buganise/api/: __init__.py  client.py  models.py  parser.py
src/buganise/cli/: __init__.py  main.py  output.py
src/buganize/: __init__.py  __main__.py
src/buganize/api/: FINDINGS.md  README.md  client.py  models.py  parser.py
src/buganize/cli/: __init__.py  cli.py  commands.py  console.py  main.py  output.py  output_handler.py  symbols.py  update_checker.py
src/buganize/gui/: README.md  __init__.py  __main__.py  app.py  columns.py  constants.py  dev.rly0nheart.buganize.desktop  filters.py  models.py  search_worker.py  window.py
tests/: test_client.py  test_models.py  test_parser.py
