[project]
name = "buganize"
version = "1.4.0"
description = "Unofficial Python client for the Google Issue Tracking system (Buganizer)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ritchie Mwewa", email = "hi@rly0nheart.com" },
]
keywords = [
    "buganizer",
    "google-issue-tracker",
    "issue-tracker",
    "bug-tracker",
    "bug-bounty",
    "vulnerability",
    "security",
    "chromium",
    "cve",
    "vrp",
    "google",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
]

[project.urls]
Changelog = "https://github.com/rly0nheart/buganize/blob/master/CHANGELOG.md"
Documentation = "https://github.com/rly0nheart/buganize/blob/master/USAGE.md"
Repository = "https://github.com/rly0nheart/buganize"

[project.scripts]
buganize = "buganize.cli.main:start"
buganise = "buganize.cli.main:start"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black[jupyter]>=26.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
